--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -40,7 +40,7 @@
 /DataFormats/Detectors/Passive                 @sawenzel
 /DataFormats/Detectors/TOF                     @noferini
 /DataFormats/Detectors/TPC                     @davidrohr @wiechula @shahor02
-/DataFormats/Detectors/TRD                     @f3sch @bazinski @martenole @wille10
+/DataFormats/Detectors/TRD                     @f3sch @bazinski @wille10
 /DataFormats/Detectors/Upgrades                @mconcas
 /DataFormats/Detectors/Upgrades/ITS3           @fgrosa @arossi81
 /DataFormats/Detectors/ZDC                     @coppedis
@@ -71,7 +71,7 @@
 /Detectors/Passive                 @sawenzel
 /Detectors/TOF                     @noferini
 /Detectors/TPC                     @davidrohr @wiechula @shahor02
-/Detectors/TRD                     @f3sch @bazinski @martenole @wille10
+/Detectors/TRD                     @f3sch @bazinski @wille10
 /Detectors/Upgrades                @mconcas
 /Detectors/Upgrades/ITS3           @fgrosa @arossi81 @mconcas @f3sch
 /Detectors/ZDC                     @coppedis
@@ -110,7 +110,7 @@
 /GPU                          @davidrohr
 #/GPU/Common
 #/GPU/GPUTracking
-/GPU/GPUTracking/TRDTracking  @davidrohr @martenole
+/GPU/GPUTracking/TRDTracking  @davidrohr
 /GPU/TPCFastTransformation    @davidrohr @sgorbuno
 /GPU/TPCSpaceChargeBase       @davidrohr @ehellbar
 
