Basic example of alpaka integration in ITS clusterer

--- a/Detectors/ITSMFT/common/reconstruction/CMakeLists.txt
+++ b/Detectors/ITSMFT/common/reconstruction/CMakeLists.txt
@@ -63,8 +63,36 @@ o2_target_root_dictionary(
           include/ITSMFTReconstruction/DecodingStat.h
           include/ITSMFTReconstruction/RUInfo.h)
 
+
+
+find_package(OpenMP QUIET)
+if(OpenMP_FOUND)
+  message(STATUS "Disabling OpenMP")
+  set(OpenMP_CXX_FLAGS "")
+  set(OpenMP_C_FLAGS "")
+  set(OpenMP_EXE_LINKER_FLAGS "")
+  set(OpenMP_FOUND FALSE)
+  set(OpenMP_CXX_FOUND FALSE)
+endif()
+
 if (OpenMP_CXX_FOUND)
     target_compile_definitions(${targetName} PRIVATE WITH_OPENMP)
     target_link_libraries(${targetName} PRIVATE OpenMP::OpenMP_CXX)
 endif()
 
+# Add the Alpaka include directory
+set(ALPAKA_DIR ${CMAKE_SOURCE_DIR}/externals/alpaka)
+include_directories(${ALPAKA_DIR}/include)
+
+# Use C++17 for Alpaka
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+# Enable a CPU backend for Alpaka (choose one)
+add_definitions(-D ALPAKA_ACC_CPU_B_SEQ_T_SEQ_ENABLED) # Serial backend
+# Explicitly disable OpenMP
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-openmp")
+add_definitions(-DALPAKA_ACC_CPU_B_OMP2_ENABLED=0)
+
+# Enable Alpaka GPU backend (if using GPUs)
+#add_definitions(-DALPAKA_ACC_GPU_CUDA_ENABLED)
