--- a/Detectors/ITSMFT/common/reconstruction/CMakeLists.txt
+++ b/Detectors/ITSMFT/common/reconstruction/CMakeLists.txt
@@ -90,7 +90,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # Enable a CPU backend for Alpaka (choose one)
 add_definitions(-D ALPAKA_ACC_CPU_B_SEQ_T_SEQ_ENABLED) # Serial backend
-#add_definitions(-D ALPAKA_ACC_CPU_B_SEQ_T_OMP2_ENABLED)
+#add_definitions(-D ALPAKA_ACC_CPU_B_SEQ_T_OMP2_ENABLED) # issues with OMP
+add_definitions(-D ALPAKA_ACC_CPU_B_SEQ_T_THREADS_ENABLED)
 
 # Explicitly disable OpenMP
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-openmp")
